# code-extractor

./: .gitignore
code-extractor/: pyproject.toml
code-extractor/code_extractor/: getCodes.py  main.py
code-extractor/tests/: test_code_extractor.py
